--- a/day04/2.get与post请求/demo.html
+++ b/day04/2.get与post请求/demo.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-<form action="http://localhost:3000" method="post">
+<form action="http://localhost:3000/" method="get">
   
   姓名： <input type="text" name="name">
   密码： <input type="password" name="age">
