--- a/day04/2.get与post请求/demo.html
+++ b/day04/2.get与post请求/demo.html
@@ -8,8 +8,9 @@
 <form action="http://localhost:3000/" method="get">
   
   姓名： <input type="text" name="name">
-  密码： <input type="password" name="age">
+  密码： <input type="password" name="password">
   <input type="submit">
+  
 
 </form>
 
