--- a/day05/3.中间件/demo.html
+++ b/day05/3.中间件/demo.html
@@ -5,8 +5,13 @@
   <title>Title</title>
 </head>
 <body>
+<form action="http://localhost:3000/test" method="post">
+  姓名 : <input type="text" name="name">
+  年龄 : <input type="text" name="age">
+  <input type="submit">
+</form>
 
-<img src="http://localhost:3000/picture" alt="">
+<!--<img src="http://localhost:3000/picture" alt="">-->
 
 </body>
 </html>
