--- a/day05/4.login&register/public/register.html
+++ b/day05/4.login&register/public/register.html
@@ -6,15 +6,18 @@
 </head>
 <body>
 
-<form action="http://localhost:3000/register" method="post">
+<form action="http://192.168.22.52:3000/register" method="post">
   
-  邮箱：<input type="email" name="email"><br><br>
+  邮箱：<input type="email" name="email" id="email"><br><br>
   昵称：<input type="text" name="nick_name"><br><br>
   密码：<input type="password" name="password"><br><br>
   重复密码：<input type="password" name="re_password"><br><br>
   <input type="submit">
 
 </form>
+<script type="text/javascript">
+
+</script>
 
 </body>
 </html>
