--- a/day05/4.login&register/public/login.html
+++ b/day05/4.login&register/public/login.html
@@ -6,13 +6,23 @@
 </head>
 <body>
 
-<form action="http://192.168.22.52:3000/login" method="post">
+<form action="http://localhost:3000/login" method="post">
   
   邮箱：<input type="email" name="email"><br><br>
   密码：<input type="password" name="password"><br><br>
   <input type="submit">
   
 </form>
+
+<script type="text/javascript">
+  
+  let err = ''
+  
+  err = '邮箱输入不合法'
+  
+  
+  
+</script>
 
 </body>
 </html>
