--- a/Ajax/3.jquery封装的ajax/public/jquery_ajax.html
+++ b/Ajax/3.jquery封装的ajax/public/jquery_ajax.html
@@ -38,7 +38,7 @@
   
   btn2.click(function () {
     //使用jQuery发送ajax-post请求------完整版写法
-    /*$.ajax({
+    $.ajax({
      url:'http://localhost:3000/ajax_post',
      method:'post', //发送请求的方式
      data:{name:'kobe',age:41}, //发送请求携带的数据
@@ -50,7 +50,7 @@
      error:function (err) {
        console.log(err)
      }
-   })*/
+   })
 
     //使用jQuery发送ajax-post请求------简写
     $.post('http://localhost:3000/ajax_post',{name:'kobe',age:41},(data)=>{
